--- a/requirements.txt
+++ b/requirements.txt
@@ -8,5 +8,6 @@ itsdangerous==2.0.1
 Jinja2==3.0.1
 MarkupSafe==2.0.1
 psycopg2-binary==2.9.1
+python-dotenv==0.19.0
 SQLAlchemy==1.4.22
 Werkzeug==2.0.1
